--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
 tracing-subscriber = { features = ["tracing", "env-filter", "tracing-log"], version = "0.3.18" }
 tracing = "0.1.40"
-tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
+tower-http = { version = "0.5.2", features = ["tracing", "trace", "cors"] }
+mime = "0.3.17"
+indoc = "2.0.5"
