--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.5"
+axum = {version = "0.7.5", features = ["http2"] }
 comrak = { version = "0.22.0", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
@@ -13,4 +13,3 @@ tracing-subscriber = { features = ["tracing", "env-filter", "tracing-log"], vers
 tracing = "0.1.40"
 tower-http = { version = "0.5.2", features = ["tracing", "trace", "cors"] }
 mime = "0.3.17"
-indoc = "2.0.5"
