--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ mime = "0.3.17"
 axum-extra = { version = "0.9.3", features = ["typed-header", "erased-json", "query"] }
 axum-client-ip = "0.6.0"
 base64 = "0.22.0"
+
+[dev-dependencies]
+http-body = "1.0.0"
+tower = "0.4.13"
+http-body-util = "0.1.1"
