--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,25 +9,33 @@ comrak = { version = "0.22.0", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
-tracing-subscriber = { features = ["tracing", "env-filter", "tracing-log"], version = "0.3.18" }
+tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter", "tracing-log"] }
 tracing = "0.1.40"
-tower-http = { version = "0.5.2", features = ["tracing", "trace", "cors", "auth",
-    "compression-br",
-    "compression-deflate",
-    "compression-gzip",
-    "compression-zstd",
-    "set-header"
-] }
 mime = "0.3.17"
 axum-extra = { version = "0.9.3", features = ["typed-header", "erased-json", "query"] }
 axum-client-ip = "0.6.0"
 base64 = "0.22.0"
 
+[dependencies.tower-http]
+version = "0.5.2"
+features = [
+  "tracing",
+  "trace",
+  "cors",
+  "auth",
+  "compression-br",
+  "compression-deflate",
+  "compression-gzip",
+  "compression-zstd",
+  "set-header",
+]
+
 [dev-dependencies]
 http-body = "1.0.0"
 tower = "0.4.13"
 http-body-util = "0.1.1"
-
+hyper-util = { version = "0.1.3", features = ["client-legacy"] }
+yare = "3.0.0"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
