--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.5", features = ["http2", "tracing"] }
+axum = { version = "0.7.5", features = ["http2"] }
 comrak = { version = "0.22.0", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.115"
+serde_json = { version = "1.0.115" }
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
 tracing-subscriber = { version = "0.3.18", features = [
   "tracing",
@@ -34,6 +34,9 @@ tower-http = { version = "0.5.2", features = [
   "compression-zstd",
   "set-header",
 ] }
+humantime-serde = "1.1.1"
+tokio-stream = { version = "0.1.15",features = ["tokio-util"] }
+futures = { version = "0.3.30",features = ["default","futures-executor"] }
 
 
 [dev-dependencies]
