--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,21 @@ comrak = { version = "0.22.0", default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
-tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter", "tracing-log"] }
+tracing-subscriber = { version = "0.3.18", features = [
+  "tracing",
+  "env-filter",
+  "tracing-log",
+] }
 tracing = "0.1.40"
 mime = "0.3.17"
-axum-extra = { version = "0.9.3", features = ["typed-header", "erased-json", "query"] }
+axum-extra = { version = "0.9.3", features = [
+  "typed-header",
+  "erased-json",
+  "query",
+] }
 axum-client-ip = "0.6.0"
 base64 = "0.22.0"
-
-[dependencies.tower-http]
-version = "0.5.2"
-features = [
+tower-http = { version = "0.5.2", features = [
   "tracing",
   "trace",
   "cors",
@@ -28,7 +33,8 @@ features = [
   "compression-gzip",
   "compression-zstd",
   "set-header",
-]
+] }
+
 
 [dev-dependencies]
 http-body = "1.0.0"
