add /cookies endpoint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.5", features = ["http2"] }
-comrak = { version = "0.22.0", default-features = false }
-serde = { version = "1.0.198", features = ["derive"] }
-serde_json = { version = "1.0.116" }
+comrak = { version = "0.23.0", default-features = false }
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
 tracing-subscriber = { version = "0.3.18", features = [
   "tracing",
@@ -20,9 +20,10 @@ axum-extra = { version = "0.9.3", features = [
   "typed-header",
   "erased-json",
   "query",
+  "cookie",
 ] }
 axum-client-ip = "0.6.0"
-base64 = "0.22.0"
+base64 = "0.22"
 tower-http = { version = "0.5.2", features = [
   "tracing",
   "trace",
@@ -37,6 +38,7 @@ tower-http = { version = "0.5.2", features = [
 humantime-serde = "1.1.1"
 hostname = "0.4.0"
 tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
+time = "0.3.36"
 
 
 [dev-dependencies]
