--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,7 @@ tower-http = { version = "0.5.2", features = [
   "trace",
   "cors",
   "auth",
-  "compression-br",
-  "compression-deflate",
-  "compression-gzip",
-  "compression-zstd",
+  "compression-full",
   "set-header",
 ] }
 humantime-serde = "1.1.1"
@@ -40,6 +37,13 @@ hostname = "0.4.0"
 tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
 time = "0.3.36"
 minijinja = "2.0.1"
+
+[dependencies.uuid]
+version = "1.8.0"
+features = [
+  "v4", # Lets you generate random UUIDs
+  "fast-rng", # Use a faster (but still sufficiently random) RNG
+]
 
 
 [dev-dependencies]
