--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,42 +8,40 @@ axum = { version = "0.7.5", features = ["http2"] }
 comrak = { version = "0.23.0", default-features = false }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
-tracing-subscriber = { version = "0.3.18", features = [
-  "tracing",
-  "env-filter",
-  "tracing-log",
+tokio = { version = "1", features = ["rt-multi-thread"] }
+tracing-subscriber = { version = "0.3", features = [
+    "tracing",
+    "env-filter",
+    "tracing-log",
 ] }
-tracing = "0.1.40"
-mime = "0.3.17"
-axum-extra = { version = "0.9.3", features = [
-  "typed-header",
-  "erased-json",
-  "query",
-  "cookie",
+tracing = "0.1"
+mime = "0.3"
+axum-extra = { version = "0.9", features = [
+    "typed-header",
+    "erased-json",
+    "query",
+    "cookie",
 ] }
-axum-client-ip = "0.6.0"
+axum-client-ip = "0.6"
 base64 = "0.22"
-tower-http = { version = "0.5.2", features = [
-  "tracing",
-  "trace",
-  "cors",
-  "auth",
-  "compression-full",
-  "set-header",
+tower-http = { version = "0.5", features = [
+    "tracing",
+    "trace",
+    "cors",
+    "auth",
+    "compression-full",
+    "set-header",
 ] }
-humantime-serde = "1.1.1"
+humantime-serde = "1"
 hostname = "0.4.0"
 tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
 time = "0.3.36"
 minijinja = "2.0.1"
+indoc = "2.0.5"
 
 [dependencies.uuid]
 version = "1.8.0"
-features = [
-  "v4", # Lets you generate random UUIDs
-  "fast-rng", # Use a faster (but still sufficiently random) RNG
-]
+features = ["v4", "fast-rng"]
 
 
 [dev-dependencies]
