--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,3 +4,4 @@ group_imports = "StdExternalCrate"
 imports_granularity = "Crate"
 trailing_comma = "Vertical"
 trailing_semicolon = true
+max_width = 120
