--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.5", features = ["http2"] }
-comrak = { version = "0.24.0", default-features = false }
+comrak = { version = "0.24", default-features = false }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tokio = { version = "1", features = ["rt-multi-thread"] }
@@ -37,11 +37,11 @@ humantime-serde = "1"
 hostname = "0.4.0"
 tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
 time = "0.3.36"
-minijinja = "2.0.1"
+minijinja = "2.0.2"
 indoc = "2.0.5"
 fastrand = "2.1.0"
-axum-valid = { version = "0.18.0", features = ["full"] }
-validator = { version = "0.18.1", features = ["derive"] }
+axum_garde = { version = "0.19.0", features = ["axum-extra-query"] }
+garde = { version = "0.19.0", features = ["derive"] }
 tower = "0.4.13"
 
 [dependencies.uuid]
@@ -52,8 +52,8 @@ features = ["v4", "fast-rng"]
 [dev-dependencies]
 http-body = "1.0.0"
 tower = "0.4.13"
-http-body-util = "0.1.1"
-hyper-util = { version = "0.1.3", features = ["client-legacy"] }
+http-body-util = "0.1.2"
+hyper-util = { version = "0.1.5", features = ["client-legacy"] }
 yare = "3.0.0"
 
 [profile.release]
