--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ garde = { version = "0.19.2", features = ["derive"] }
 tower = "0.4.13"
 
 [dependencies.uuid]
-version = "1.8.0"
+version = "1.9.0"
 features = ["v4"]
 default-features = false
 
@@ -48,7 +48,7 @@ default-features = false
 [dev-dependencies]
 http-body-util = "0.1.2"
 hyper-util = { version = "0.1.5", features = ["client-legacy"] }
-yare = "3.0.0"
+test-case = "3"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
