--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,30 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.5", features = ["http2", "tower-log","matched-path"], default-features = false }
-markdown ={ version =  "1.0.0-alpha.17" }
+markdown = { version = "1.0.0-alpha.17" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 tokio = { version = "~1", features = ["rt-multi-thread"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing = "0.1"
 mime = "0.3"
-axum-extra = { version = "0.9", features = [
-    "typed-header",
-    "erased-json",
-    "query",
-    "cookie",
-] }
 axum-client-ip = "0.6"
 base64 = "~0.21"
-tower-http = { version = "0.5", features = [
-    "trace",
-    "cors",
-    "compression-full",
-    "set-header",
-    "request-id",
-    "util",
-] }
 humantime-serde = "1"
 hostname = "0.4.0"
 tokio-stream = { version = "0.1.15", features = ["time"], default-features = false }
@@ -38,6 +23,33 @@ fastrand = "2.1.0"
 axum_garde = { version = "0.19.2", features = ["axum-extra-query"] }
 garde = { version = "0.19.2", features = ["derive"] }
 tower = "0.4.13"
+
+[dependencies.axum]
+
+
+version = "0.7.5"
+features = ["http2", "tower-log", "matched-path"]
+default-features = false
+
+[dependencies.axum-extra]
+version = "0.9"
+features = [
+  "typed-header",
+  "erased-json",
+  "query",
+  "cookie",
+]
+
+[dependencies.tower-http]
+version = "0.5"
+features = [
+  "trace",
+  "cors",
+  "compression-full",
+  "set-header",
+  "request-id",
+  "util",
+]
 
 [dependencies.uuid]
 version = "1.9.0"
