--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,58 +4,32 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-markdown = { version = "1.0.0-alpha.20" }
+markdown = "1.0.0-alpha.21"
 serde = { version = "1", features = ["derive"] }
-serde_json = { version = "1", default-features = false }
+serde_json = "1"
 tokio = { version = "~1", features = ["rt-multi-thread"] }
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"] }
 tracing = "0.1"
 mime = "0.3"
+axum = { version = "0.7.7", features = ["http2", "tower-log", "matched-path", "ws"] }
+axum-extra = { version = "0.9", features = ["typed-header", "erased-json", "query", "cookie", ] }
 axum-client-ip = "0.6"
-base64 = "~0.21"
+base64 = "~0.22"
 humantime-serde = "1"
 hostname = "0.4"
-tokio-stream = { version = "0.1", features = ["time"], default-features = false }
-time = { version = "0.3", default-features = false }
+tokio-stream = "0.1"
+time = "0.3"
 minijinja = "2"
 indoc = "2"
 fastrand = "2"
-axum_garde = { version = "0.20", features = ["axum-extra-query"] }
+axum_garde = { version = "0.20", features = ["query"] }
 garde = { version = "0.20", features = ["derive"] }
-tower = "0.4"
-multer = { version = "3", default-features = false }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", ]  }
+multer = "3"
 serde_urlencoded = "0.7.1"
-futures-util = "0.3.30"
-
-[dependencies.axum]
-version = "0.7.5"
-features = ["http2", "tower-log", "matched-path", "ws"]
-default-features = false
-
-[dependencies.axum-extra]
-version = "0.9"
-features = [
-  "typed-header",
-  "erased-json",
-  "query",
-  "cookie",
-]
-
-[dependencies.tower-http]
-version = "0.5"
-features = [
-  "trace",
-  "cors",
-  "compression-full",
-  "set-header",
-  "request-id",
-  "util",
-]
-
-[dependencies.uuid]
-version = "1.10"
-features = ["v4"]
-default-features = false
+uuid = { version = "1.10", features = ["v4"] }
+derive_more = { version = "1.0.0", features = ["deref_mut", "deref"] }
 
 
 [dev-dependencies]
