--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ multer = "3"
 serde_urlencoded = "0.7"
 uuid = { version = "1.11", features = ["v4"] }
 derive_more = { version = "1.0.0", features = ["deref_mut", "deref"] }
+tokio-util = "0.7"
 
 
 [dev-dependencies]
