--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2021"
 
 [dependencies]
 markdown = "1.0.0-alpha.21"
-serde = { version = "1", features = ["derive"] }
+serde = {version = "1", features = ["derive"]}
 serde_json = "1"
-tokio = { version = "~1", features = ["rt-multi-thread", "signal"] }
-tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"] }
+tokio = {version = "~1", features = ["rt-multi-thread", "signal"]}
+tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
 tracing = "0.1"
 mime = "0.3"
-axum = { version = "0.7", features = ["http2", "tower-log", "matched-path", "ws"] }
-axum-extra = { version = "0.9", features = ["typed-header", "erased-json", "query", "cookie", ] }
+axum = {version = "0.7", features = ["http2", "tower-log", "matched-path", "ws"]}
+axum-extra = {version = "0.9", features = ["typed-header", "erased-json", "query", "cookie"]}
 axum-client-ip = "0.6"
 base64 = "~0.22"
 humantime-serde = "1"
@@ -22,22 +22,23 @@ time = "0.3"
 minijinja = "2"
 indoc = "2"
 fastrand = "2"
-axum_garde = { version = "0.20", features = ["query"] }
-garde = { version = "0.20", features = ["derive"] }
+axum_garde = {version = "0.20", features = ["query"]}
+garde = {version = "0.20", features = ["derive"]}
 tower = "0.5"
-tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", ]  }
+tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util"]}
 multer = "3"
 serde_urlencoded = "0.7"
-uuid = { version = "1.11", features = ["v4"] }
-derive_more = { version = "1.0.0", features = ["deref_mut", "deref"] }
+uuid = {version = "1.11", features = ["v4"]}
+derive_more = {version = "1.0.0", features = ["deref_mut", "deref"]}
 tokio-util = "0.7"
 once_cell = "1.20.2"
 futures-util = "0.3.31"
+socketioxide = {version = "0.15.1", features = ["extensions", "state"]}
 
 
 [dev-dependencies]
 http-body-util = "0.1"
-hyper-util = { version = "0.1", features = ["client-legacy"] }
+hyper-util = {version = "0.1", features = ["client-legacy"]}
 test-case = "3"
 
 [profile.release]
