--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rs-httpbin"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 markdown = "1.0.0-alpha.21"
@@ -18,7 +18,6 @@ base64 = "~0.22"
 humantime-serde = "1"
 hostname = "0.4"
 tokio-stream = "0.1"
-time = "0.3"
 minijinja = "2"
 indoc = "2"
 fastrand = "2"
@@ -34,6 +33,10 @@ tokio-util = "0.7"
 once_cell = "1.20.2"
 futures-util = "0.3.31"
 socketioxide = {version = "0.15.1", features = ["extensions", "state"]}
+thiserror = "2.0.8"
+#utoipa-axum = { version = "0.1.2", optional = true }
+#utoipa = { version = "5.2.0", optional = true }
+#utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "vendored"], optional = true }
 
 
 [dev-dependencies]
@@ -43,7 +46,12 @@ test-case = "3"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
-opt-level = "z"   # Optimize for size.
-lto = true
-codegen-units = 1
-panic = "abort"
+opt-level = "s"   # Optimize for size.
+lto = true 
+codegen-units = 1 # Reduce the number of codegen units to improve optimization.
+
+[features]
+default = []
+#openapi = ["dep:utoipa", "dep:utoipa-axum"]
+#openapi-swagger-ui = ["openapi", "utoipa-swagger-ui"]
+
