--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,13 @@ tokio-stream = "0.1"
 minijinja = "2"
 indoc = "2"
 fastrand = "2"
-axum_garde = {version = "0.20", features = ["query"]}
-garde = {version = "0.20", features = ["derive"]}
+axum_garde = {version = "0.21", features = ["query"]}
+garde = {version = "0.21", features = ["derive"]}
 tower = "0.5"
 tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util"]}
 multer = "3"
 serde_urlencoded = "0.7"
-uuid = {version = "1.11", features = ["v4"]}
+uuid = {version = "1.11", features = ["v4", "serde",]}
 derive_more = {version = "1.0.0", features = ["deref_mut", "deref"]}
 tokio-util = "0.7"
 once_cell = "1.20.2"
@@ -42,11 +42,12 @@ socketioxide = {version = "0.15.1", features = ["extensions", "state"]}
 http-body-util = "0.1"
 hyper-util = {version = "0.1", features = ["client-legacy"]}
 test-case = "3"
+tokio-tungstenite = "^0.26"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
 opt-level = "s"   # Optimize for size.
-lto = true 
+lto = true
 codegen-units = 1 # Reduce the number of codegen units to improve optimization.
 
 [features]
