--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,4 +1,4 @@
-unstable_features = false
+unstable_features = true
 reorder_imports = true
 group_imports = "StdExternalCrate"
 imports_granularity = "Crate"
