--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,37 @@
 [package]
-name = "rs-httpbin"
-version = "0.1.0"
 edition = "2024"
+name = "rs-httpbin"
 rust-version = "1.85"
+version = "0.1.0"
 
 [dependencies]
+axum = {version = "0.8", default-features = false, features = ["http2", "tower-log", "matched-path", "ws"]}
+axum-client-ip = "0.7.0"
+axum-extra = {version = "0.10.0", features = ["typed-header", "erased-json", "query", "cookie"]}
+axum-valid = {version = "0.22.0", default-features = false, features = ["garde", "extra_query"]}
+base64 = "~0.22"
+derive_more = {version = "2.0.1", features = ["deref_mut", "deref"]}
+fastrand = "2"
+form_urlencoded = "1.2.1"
+futures-util = "0.3.31"
+garde = {version = "0.22", features = ["derive"]}
+hostname = "0.4.0"
+humantime-serde = "1"
+indoc = "2"
 markdown = "1.0.0-alpha.22"
+mime = "0.3"
+minijinja = "2"
+multer = "3"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
+socketioxide = {version = "0.16", features = ["extensions", "state"]}
 tokio = {version = "~1", features = ["rt-multi-thread", "signal"]}
-tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
-tracing = "0.1"
-mime = "0.3"
-axum = {version = "0.8", features = ["http2", "tower-log", "matched-path", "ws"]}
-axum-extra = {version = "0.10.0", features = ["typed-header", "erased-json", "query", "cookie"]}
-axum-client-ip = "0.7.0"
-base64 = "~0.22"
-humantime-serde = "1"
-hostname = "0.4"
 tokio-stream = "0.1"
-minijinja = "2"
-indoc = "2"
-fastrand = "2"
-garde = {version = "0.22", features = ["derive"]}
 tower = "0.5"
 tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
-multer = "3"
-serde_urlencoded = "0.7"
+tracing = "0.1"
+tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
 uuid = {version = "1.13", features = ["v4", "serde"]}
-derive_more = {version = "2.0.1", features = ["deref_mut", "deref"]}
-tokio-util = "0.7"
-futures-util = "0.3.31"
-socketioxide = {version = "0.16", features = ["extensions", "state"]}
-axum-valid = { version = "0.22.0", default-features = false, features = ["garde", "extra_query"] }
-
 
 [dev-dependencies]
 anyhow = "1"
@@ -43,10 +41,10 @@ test-case = "3"
 tokio-tungstenite = "^0.26"
 
 [profile.release]
-strip = true      # Automatically strip symbols from the binary.
-opt-level = "s"   # Optimize for size.
-lto = true
 codegen-units = 1 # Reduce the number of codegen units to improve optimization.
+lto = true
+opt-level = "s" # Optimize for size.
+strip = true # Automatically strip symbols from the binary.
 
 [features]
 default = []
