--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
           #          - windows-latest
           - macOS-latest
         rust_toolchain:
-          #          - stable
+          - stable
           - nightly
     runs-on: ${{ matrix.os }}
     steps:
