--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,20 +18,20 @@ garde = {version = "0.22", features = ["derive"]}
 hostname = "0.4.0"
 humantime-serde = "1"
 indoc = "2"
-markdown = "1.0.0-alpha.22"
+markdown = "1.0.0-alpha.23"
 mime = "0.3"
 minijinja = "2"
 multer = "3"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 socketioxide = {version = "0.16", features = ["extensions", "state"]}
-tokio = {version = "~1", features = ["rt-multi-thread", "signal"]}
+tokio = {version = "1.43", features = ["rt-multi-thread", "signal"]}
 tokio-stream = "0.1"
 tower = "0.5"
 tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
 tracing = "0.1"
 tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
-uuid = {version = "1.14", features = ["v4", "serde"]}
+uuid = {version = "1.15", features = ["v4", "serde"]}
 
 [dev-dependencies]
 anyhow = "1"
@@ -48,3 +48,6 @@ strip = true # Automatically strip symbols from the binary.
 
 [features]
 default = []
+
+[patch.crates-io]
+state = {git = "https://github.com/zuisong/state", branch = "loom-as-dev-dep", version = "0.6.0", public = true}
