--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ rust-version = "1.85"
 version = "0.1.0"
 
 [dependencies]
-axum = {version = "0.8", default-features = false, features = ["http2", "tower-log", "matched-path", "ws"]}
+axum = {version = "0.8", default-features = false, features = ["http2", "tower-log", "matched-path", "ws", "json", "macros"]}
 axum-client-ip = "0.7.0"
 axum-extra = {version = "0.10.0", features = ["typed-header", "erased-json", "query", "cookie"]}
 axum-valid = {version = "0.23.0", default-features = false, features = ["garde", "extra_query"]}
@@ -15,7 +15,6 @@ fastrand = "2"
 form_urlencoded = "1.2.1"
 futures-util = "0.3.31"
 garde = {version = "0.22", features = ["derive"]}
-hostname = "0.4.0"
 humantime-serde = "1"
 indoc = "2"
 markdown = "1.0.0-alpha.23"
@@ -25,13 +24,14 @@ multer = "3"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 socketioxide = {version = "0.16", features = ["extensions", "state"]}
-tokio = {version = "1.43", features = ["rt-multi-thread", "signal"]}
+tokio = {version = "1.43", features = ["rt-multi-thread"]}
 tokio-stream = "0.1"
 tower = "0.5"
 tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
 tracing = "0.1"
 tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
 uuid = {version = "1.15", features = ["v4", "serde"]}
+whoami = {version = "2.0.0-pre.1", default-features = false}
 
 [dev-dependencies]
 anyhow = "1"
