--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ rust-version = "1.85"
 version = "0.1.0"
 
 [dependencies]
-axum = {version = "0.8", default-features = false, features = ["http2", "tower-log", "matched-path", "ws", "json", "macros"]}
+axum = {version = "0.8", default-features = false, features = ["http1", "http2", "tower-log", "matched-path", "ws", "json", "macros"]}
 axum-client-ip = "0.7.0"
 axum-extra = {version = "0.10.0", features = ["typed-header", "erased-json", "query", "cookie"]}
 axum-valid = {version = "0.23.0", default-features = false, features = ["garde", "extra_query"]}
@@ -42,7 +42,7 @@ tokio-tungstenite = "^0.26"
 
 [profile.release]
 codegen-units = 1 # Reduce the number of codegen units to improve optimization.
-lto = true 
+lto = true
 opt-level = "s" # Optimize for size.
 strip = true # Automatically strip symbols from the binary.
 
