--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,40 +5,40 @@ rust-version = "1.85"
 version = "0.1.0"
 
 [dependencies]
-axum = {version = "0.8", default-features = false, features = ["http1", "http2", "tower-log", "matched-path", "ws", "json", "macros"]}
+axum = {version = "0.8.3", default-features = false, features = ["http1", "http2", "tower-log", "matched-path", "ws", "json", "macros"]}
 axum-client-ip = "0.7.0"
-axum-extra = {version = "0.10.0", features = ["typed-header", "erased-json", "query", "cookie"]}
+axum-extra = {version = "0.10.1", features = ["typed-header", "erased-json", "query", "cookie"]}
 axum-valid = {version = "0.23.0", default-features = false, features = ["garde", "extra_query"]}
-base64 = "0.22"
+base64 = "0.22.1"
 derive_more = {version = "2.0.1", features = ["deref_mut", "deref"]}
-fastrand = "2"
+fastrand = "2.3.0"
 form_urlencoded = "1.2.1"
 futures-util = "0.3.31"
 garde = {version = "0.22", features = ["derive"]}
-indoc = "2"
-jiff = { version = "0.2.5", default-features = false, features = ["serde", "std"] }
-markdown = "1.0.0-alpha.23"
-mime = "0.3"
-minijinja = "2"
-multer = "3"
-serde = {version = "1", features = ["derive"]}
-serde_json = "1"
-socketioxide = {version = "0.16", features = ["extensions", "state"]}
-tokio = {version = "1.43", features = ["rt-multi-thread"]}
-tokio-stream = "0.1"
-tower = "0.5"
-tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
-tracing = "0.1"
-tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"]}
-uuid = {version = "1.15", features = ["v4", "serde"]}
+indoc = "2.0.6"
+jiff = { version = "0.2.10", default-features = false, features = ["serde", "std"] }
+markdown = "1"
+mime = "0.3.17"
+minijinja = "2.9.0"
+multer = "3.1.0"
+serde = {version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.140"
+socketioxide = {version = "0.16.2", features = ["extensions", "state"]}
+tokio = {version = "1.44.2", features = ["rt-multi-thread"]}
+tokio-stream = "0.1.17"
+tower = "0.5.2"
+tower-http = {version = "0.6.2", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
+tracing = "0.1.41"
+tracing-subscriber = {version = "0.3.19", default-features = false, features = ["env-filter", "json", "fmt"]}
+uuid = {version = "1.16.0", features = ["v4", "serde"]}
 whoami = {version = "2.0.0-pre.1", default-features = false}
 
 [dev-dependencies]
-anyhow = "1"
-http-body-util = "0.1"
-hyper-util = {version = "0.1", features = ["client-legacy"]}
-test-case = "3"
-tokio-tungstenite = "^0.26"
+anyhow = "1.0.98"
+http-body-util = "0.1.3"
+hyper-util = {version = "0.1.11", features = ["client-legacy"]}
+test-case = "3.3.1"
+tokio-tungstenite = "^0.26.2"
 
 [profile.release]
 codegen-units = 1 # Reduce the number of codegen units to improve optimization.
