--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,53 +1,54 @@
 [package]
-edition = "2024"
 name = "rs-httpbin"
-rust-version = "1.85"
 version = "0.1.0"
+edition = "2024"
+rust-version = "1.86"
 
 [dependencies]
-axum = {version = "0.8.3", default-features = false, features = ["http1", "http2", "tower-log", "matched-path", "ws", "json", "macros"]}
+axum = { version = "0.8.3", default-features = false, features = ["http1", "http2", "json", "macros", "matched-path", "tower-log", "ws", ] }
 axum-client-ip = "0.7.0"
-axum-extra = {version = "0.10.1", features = ["typed-header", "erased-json", "query", "cookie"]}
-axum-valid = {version = "0.23.0", default-features = false, features = ["garde", "extra_query"]}
+axum-extra = { version = "0.10.1", features = ["cookie", "erased-json", "query", "typed-header", ] }
+axum-valid = { version = "0.23.0", default-features = false, features = ["extra_query", "garde", ] }
 base64 = "0.22.1"
-derive_more = {version = "2.0.1", features = ["deref_mut", "deref"]}
+derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
 fastrand = "2.3.0"
 form_urlencoded = "1.2.1"
 futures-util = "0.3.31"
-garde = {version = "0.22", features = ["derive"]}
+garde = { version = "0.22", features = ["derive"] }
 indoc = "2.0.6"
-jiff = { version = "0.2.10", default-features = false, features = ["serde", "std"] }
+jiff = { version = "0.2.10", default-features = false, features = ["serde", "std", ] }
 markdown = "1"
 mime = "0.3.17"
 minijinja = "2.9.0"
 multer = "3.1.0"
-serde = {version = "1.0.219", features = ["derive"]}
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-socketioxide = {version = "0.16.2", features = ["extensions", "state"]}
-tokio = {version = "1.44.2", features = ["rt-multi-thread"]}
+socketioxide = { version = "0.17.0", features = ["extensions", "state"] }
+tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.17"
 tower = "0.5.2"
-tower-http = {version = "0.6.2", features = ["trace", "cors", "compression-full", "set-header", "request-id", "util", "decompression-full"]}
+tower-http = { version = "0.6.2", features = ["compression-full", "cors", "decompression-full", "request-id", "set-header", "trace", "util", ] }
 tracing = "0.1.41"
-tracing-subscriber = {version = "0.3.19", default-features = false, features = ["env-filter", "json", "fmt"]}
-uuid = {version = "1.16.0", features = ["v4", "serde"]}
-whoami = {version = "2.0.0-pre.1", default-features = false}
+tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "json", ] }
+uuid = { version = "1.16.0", features = ["serde", "v4"] }
+whoami = { version = "2.0.0-pre.1", default-features = false }
 
 [dev-dependencies]
 anyhow = "1.0.98"
 http-body-util = "0.1.3"
-hyper-util = {version = "0.1.11", features = ["client-legacy"]}
+hyper-util = { version = "0.1.11", features = ["client-legacy"] }
 test-case = "3.3.1"
+# pretty_assertions = "1.4.1"
 tokio-tungstenite = "^0.26.2"
-
-[profile.release]
-codegen-units = 1 # Reduce the number of codegen units to improve optimization.
-lto = true
-opt-level = "s" # Optimize for size.
-strip = true # Automatically strip symbols from the binary.
 
 [features]
 default = []
 
 [patch.crates-io]
-state = {git = "https://github.com/zuisong/state", branch = "loom-as-dev-dep", version = "0.6.0"}
+state = { version = "0.6.0", branch = "loom-as-dev-dep", git = "https://github.com/zuisong/state" }
+
+[profile.release]
+opt-level = "s"  # Optimize for size.
+strip = true  # Automatically strip symbols from the binary.
+lto = true
+codegen-units = 1  # Reduce the number of codegen units to improve optimization.
