--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2024"
 rust-version = "1.86"
 
 [dependencies]
-axum = { version = "0.8.3", default-features = false, features = ["http1", "http2", "json", "macros", "matched-path", "tower-log", "ws", ] }
-axum-client-ip = "0.7.0"
+axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "json", "macros", "matched-path", "tower-log", "ws", ] }
+axum-client-ip = "=0.7.0"
 axum-extra = { version = "0.10.1", features = ["cookie", "erased-json", "query", "typed-header", ] }
 axum-valid = { version = "0.23.0", default-features = false, features = ["extra_query", "garde", ] }
 base64 = "0.22.1"
@@ -16,33 +16,34 @@ form_urlencoded = "1.2.1"
 futures-util = "0.3.31"
 garde = { version = "0.22", features = ["derive"] }
 indoc = "2.0.6"
-jiff = { version = "0.2.10", default-features = false, features = ["serde", "std", ] }
+jiff = { version = "0.2.13", default-features = false, features = ["serde", "std", ] }
 markdown = "1"
 mime = "0.3.17"
-minijinja = "2.9.0"
+minijinja = "2.10.2"
 multer = "3.1.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 socketioxide = { version = "0.17.0", features = ["extensions", "state"] }
-tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
+tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.17"
 tower = "0.5.2"
-tower-http = { version = "0.6.2", features = ["compression-full", "cors", "decompression-full", "request-id", "set-header", "trace", "util", ] }
+tower-http = { version = "0.6.4", features = ["compression-full", "cors", "decompression-full", "request-id", "set-header", "trace", "util", ] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "json", ] }
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
-whoami = { version = "2.0.0-pre.1", default-features = false }
-
+whoami = { version = "2.0.0-pre.2", default-features = false }
+pretty_assertions = { version = "1.4.1",optional = true }
 [dev-dependencies]
 anyhow = "1.0.98"
 http-body-util = "0.1.3"
 hyper-util = { version = "0.1.11", features = ["client-legacy"] }
 test-case = "3.3.1"
-# pretty_assertions = "1.4.1"
+
 tokio-tungstenite = "^0.26.2"
 
 [features]
 default = []
+pretty_assertions = ["dep:pretty_assertions"]
 
 [patch.crates-io]
 state = { version = "0.6.0", branch = "loom-as-dev-dep", git = "https://github.com/zuisong/state" }
