--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rs-httpbin"
 version = "0.1.0"
 edition = "2024"
-rust-version = "1.86"
+rust-version = "1.87"
 
 [dependencies]
 axum = { version = "0.8.4", default-features = false, features = [
@@ -41,7 +41,6 @@ markdown = "1"
 mime = "0.3.17"
 minijinja = "2.10.2"
 multer = "3.1.0"
-pretty_assertions = { version = "1.4.1", optional = true }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 socketioxide = { version = "0.17.0", features = ["extensions", "state"] }
@@ -63,21 +62,20 @@ tracing-subscriber = { version = "0.3.19", default-features = false, features = 
   "fmt",
   "json",
 ] }
-uuid = { version = "=1.16.0", default-features = false, features = [
+uuid = { version = "~1.16", default-features = false, features = [
   "v4",
 ] }
-whoami = { version = "2.0.0-pre.2", default-features = false }
+whoami = { version = "1.6", default-features = false }
 
 [dev-dependencies]
 anyhow = "1.0.98"
 http-body-util = "0.1.3"
 hyper-util = { version = "0.1.11", features = ["client-legacy"] }
 test-case = "3.3.1"
-tokio-tungstenite = "^0.26.2"
+tokio-tungstenite = "0.26"
 
 [features]
 default = []
-pretty_assertions = ["dep:pretty_assertions"]
 
 [patch.crates-io]
 state = { version = "0.6.0", branch = "loom-as-dev-dep", git = "https://github.com/zuisong/state" }
